--- a/css/login.css
+++ b/css/login.css
@@ -1,98 +1,186 @@
-*{
-    margin: 0;
-    border: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+
+:root {
+    --login-bg:#f1eded;
+    --title-bg: #000000;
+    --button-bg: #d36161;
+    --light-pink: #000000;
+    --image-bg:  #efc1c1 ;
 }
 
-.image{
-    display: grid;
+body {
     height: 100vh;
-    place-items: center;
-    background-image: url("../img/loginBackground.png");
+    font-family: 'Poppins', sans-serif;
+    background-image: url("../images/loginBackground.png");
     background-repeat:no-repeat;
     background-size: cover;
-}
-.card{
-    background-color: white;
-    width: 45vw;
-    height: 50vh;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
     display: flex;
-    flex-direction: column;
-}
-.card .title{
-    text-align: center;
-    font-size: 30px;
-    font-weight: 400;
-}
-.card .social_Icons{
-    margin-top: 20px;
-    display: flex;
+    align-items: center;
     justify-content: center;
 }
-.social_Icons a{
-    display: block;
-    height: 45px;
-    width: 100px;
-    text-align: center;
-}
-a i{
-    font-size: 30px;  
-}
-form{
-    width: 300px;
-    align-self: center;
-}
-form .inputbox{
-    height: 30px;
-    width: 100%;
-    position: relative;
-    margin-bottom: 5px;
-    
-    
-}
-.inputbox input{
-    height: 100%;
-    width: 100%;
-    outline: none;
-    font-size: 10px;
-    padding-left: 30px;
-    border-radius: 5px;
-    border: 1px solid black;
-}
-.inputbox .icon{
-    position: absolute;
-    top: 5%;
-    left: 4%;
-    color: grey;
-}
-.inputbox .option-div{
+
+.login-container {
+    height: 43.75em;
+    width: 60em;
+    border-radius: 10px;
     display: flex;
-    margin-bottom: 5px;  
+    justify-content: space-between;
+    overflow: hidden;
 }
-.inputbox .option-div input{
-    width: 10%;
+
+.login-info-container {
+
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    /* padding-top: 1rem; */
+    background-color: var(--login-bg);
 }
-.inputbox .option-div span{
-    font-size: 8px;
+
+.image-container {
+    padding: 2rem;
+    width: 50%;
+    background-color: var(--image-bg);
+    box-sizing: border-box;
 }
-.inputbox input{
-    font-size: 8px;
+
+.title {
+    text-transform: capitalize;
+    font-size: 2.25rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    color: var(--title-bg);
 }
-.inputbox .forget-div{
-    font-size: 8px;
-    padding-left: 0;
+
+.social-login {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    cursor: pointer;
 }
-.button:nth-child(even){
-    background-color: rgba(211, 97, 97, 0.8);
-    margin-bottom: 5px;
+
+.social-login-element {
+    width: 12.5rem;
+    height: 3.75rem;
+    font-size: 1.2rem;
+    font-weight: 700;
+    letter-spacing: 0.5px;
+    border-radius: 5px;
+    border: 1px solid var(--button-bg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.button:nth-child(odd){
-    background-color: #F4ECEC;
-    margin-bottom: 5px;
+
+.social-login-element img {
+    width: 1.875rem;
+    height: 1.875rem;
+    position: relative;
+    top: 0;
+    left: -0.625rem;
 }
+
+.social-login-element:hover {
+    background-color: #fff;
+}
+
+.login-info-container > p {
+    font-size: 1.25em;
+    margin-top: 1.5em;
+}
+
+.inputs-container {
+    height: 55%;
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.input, .btn {
+    width: 90%;
+    height: 3.125rem;
+    font-size: 1em;
+}
+
+/* .input {
+    padding-left: 20px;
+    border: none;
+    border-radius: 5px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    box-sizing: border-box;
+} */
+
+.input:hover {
+    border: 2px solid var(--button-bg);
+}
+
+.btn {
+    width: 80%;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--button-bg);
+    cursor: pointer;
+}
+
+.inputs-container p {
+    margin: 0;
+}
+
+.span {
+    color: var(--light-pink);
+    font-weight: 600;
+    cursor: pointer;
+}
+
+
+@media screen and (max-width: 1000px) {
+    .login-container {
+        width: 70%;
+        margin-top: 3rem;
+    }
+    .login-info-container {
+        width: 100%;
+        border-radius: 5px;
+    }
+    
+    .image-container {
+        display: none;
+    }  
+}
+
+@media screen and (max-width: 650px) {
+    .login-container {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .login-container {
+        height: 90%;
+    }
+
+    .social-login {
+        flex-direction: column;
+        align-items: center;
+        height: 30%;
+    }
+
+    .login-info-container > p {
+        margin: 0;
+    }
+}
+
+
+
+
+
+
 
