--- a/css/login.css
+++ b/css/login.css
@@ -14,17 +14,23 @@ body {
     background-image: url("../images/loginBackground.png");
     background-repeat:no-repeat;
     background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    
 }
 
+main {
+    display: flex;
+   justify-content: center;
+    
+}
+
+
 .login-container {
+    margin-top: 60px;
     height: 43.75em;
     width: 60em;
     border-radius: 10px;
     display: flex;
-    justify-content: space-between;
+    
     overflow: hidden;
 }
 
@@ -34,8 +40,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* justify-content: space-between; */
     text-align: center;
-    /* padding-top: 1rem; */
+    padding-top: 60px;
     background-color: var(--login-bg);
 }
 
@@ -59,6 +66,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     cursor: pointer;
+    margin-top: 20px;
 }
 
 .social-login-element {
@@ -114,6 +122,7 @@ body {
     letter-spacing: 1px;
     box-sizing: border-box;
 } */
+
 
 .input:hover {
     border: 2px solid var(--button-bg);
